sass/include/_icons.scss
/* ... */
@if $enable-icons {
  @if $icon-bitbucket {.bitbucket { background-image: icon(bitbucket, "%2328f", 2, "none") }}
  @if $icon-buymeacoffee {.buymeacoffee { background-image: icon(buymeacoffee, "%23777", 1, "%23fd0") }}
  @if $icon-check {.check { background-image: icon(check, "%23888", 2, "none") }}
  @if $icon-chevron {.chevron { background-image: icon(chevron, "%23888", 2, "none") }}
  @if $icon-clock {.clock { background-image: icon(clock, "%23888", 2, "none") }}
  @if $icon-contrast {.contrast { mask: icon(contrast, "none", 1, "%23000") ; background: var(--f2)}}
  @if $icon-date {.date { background-image: icon(date, "%23888", 2, "none") }}
  @if $icon-docker {.docker { background-image: icon(docker, "%2329e", 2, "none") }}
  @if $icon-element {.element { background-image: icon(element, "none", 1, "%231c8") }}
  @if $icon-facebook {.facebook { background-image: icon(facebook, "%23359", 2, "none") }}
  @if $icon-folder {.folder { background-image: icon(folder, "%23888", 2, "none") }}
  @if $icon-github {.github { background-image: icon(github, "%23888", 2, "none") }}
  @if $icon-github-sponsor {.github-sponsor { background-image: icon(github-sponsor, "%23c49", 2, "none") }}
  @if $icon-gitlab {.gitlab { background-image: icon(gitlab, "%23e62", 2, "none") }}
  @if $icon-globe {.globe { background-image: icon(globe, "%23888", 2, "none") }}
  @if $icon-home {.home { background-image: icon(home, "%23888", 2, "none") }}
  @if $icon-instagram {.instagram { background-image: icon(instagram, "%23e07", 2, "none") }}
  @if $icon-linkedin {.linkedin { background-image: icon(linkedin, "%2326a", 2, "none") }}
  @if $icon-mail {.mail { background-image: icon(mail, "%23888", 2, "none") }}
  @if $icon-mastodon {.mastodon { background-image: icon(mastodon, "none", 1, "%2328c") }}
  @if $icon-matrix {.matrix { background-image: icon(matrix, "%23888", 2, "none") }}
  @if $icon-minus {.minus { background-image: icon(minus, "%23888", 2, "none") }}
  @if $icon-moon {.moon { background-image: icon(moon, "%23888", 2, "none") }}
  @if $icon-pinterest {.pinterest { background-image: icon(pinterest, "%23b01", 2, "none") }}
  @if $icon-python {.python { background-image: icon(python, "%23fc1", 2, "%2326a") }}
  @if $icon-researchgate {.researchgate { background-image: icon(researchgate, "none", 2, "%230db") }}
  @if $icon-rss {.rss { background-image: icon(rss, "%23e94", 2, "none") }}
  @if $icon-search {.search { background-image: icon(search, "%23888", 2, "none") }}
  @if $icon-stack {.stack { background-image: icon(stack, "%23e72", 2, "none") }}
  @if $icon-sun {.sun { background-image: icon(sun, "%23888", 2, "none") }}
  @if $icon-tag {.tag { background-image: icon(tag, "%23888", 2, "none") }}
  @if $icon-twitch {.twitch { background-image: icon(twitch, "%23a7f", 2, "none") }}
  @if $icon-twitter {.twitter { background-image: icon(twitter, "%232ad", 2, "none") }}
  @if $icon-x {.x { background-image: icon(x, "%23f00", 2, "none") }}
  @if $icon-youtube {.youtube { background-image: icon(youtube, "%23f00", 2, "none") }}
  .svg {
    width: 48px;
    height: 48px;
    display: inline-block;
    overflow: hidden;
    vertical-align: middle
  }
  .svgs {
    width: var(--fs);
    height: var(--fs);
    display: inline-block;
    overflow: hidden;
    vertical-align: middle
  }
  .svgh:hover {
      background: var(--a3);
      opacity: 1;
  }
}

